[tool.poetry]
name = "hs_code"
version = "0.1.0"
description = ""
authors = ["Noah Gardner <ngngardner@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
juliacall = "^0.8.0"

numpy = "^1.22.3"
scipy = "^1.8.0"
h5py = "^3.6.0"
mat4py = "^0.5.0"
Pillow = "^9.1.0"
tifffile = "^2022.4.28"
sklearn = "^0.0"
fuzzy-c-means = "^1.6.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
wemake-python-styleguide = "^0.16.1"

jupyter = "^1.0.0"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
